<resources>
    <string name="app_name">Tactic Snake</string>

    <string name="gamename">Tactic Snake</string>

    <string name="menu_category1">quick game</string>
    <string name="menu_category2">play</string>
        <string name="menu_play_category1">Find Game</string>
            <string name="menu_find_title">Enter Room ID</string>
            <string name="menu_find_hint">Enter ID</string>
            <string name="menu_find_btn">Find</string>
        <string name="menu_play_category2">Online Game</string>
        <string name="menu_play_category3">Hotseat</string>
    <string name="menu_category3">Game Settings</string>
    <string name="menu_category4">Player Settings</string>
    <string name="menu_category5">Instructions</string>
    <string name="menu_category6">Statistics</string>



    <string name="onlineplaybtn">Play</string>

    <string name="gamesettings1">Board size: 8</string>
    <string name="gamesettings2">Players: 4</string>
    <string name="gamesettings3">Corpse mode</string>
    <string name="gamesettings4">Portal Walls</string>
    <string name="playersettings1">Name</string>
    <string name="playersettings2">Snake color</string>



    <string name="back_btn">Back</string>
    <string name="back_btn2">Done</string>
    <string name="play_btn">Play</string>
    <string name="cancel_btn">Cancel</string>

    <string name="corpsetext">Corpse Mode</string>
    <string name="portaltext">Portal Walls Mode</string>
    <string name="privatetext">Private</string>


    <string name="imagedescriptor">image</string>

    <string name="version">v0.3 12/03/24</string>

<!--    Descriptions-->
    <string name="title_description">Game Logo</string>
</resources>