<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@id/parent_layout"
        app:layout_constraintEnd_toEndOf="@id/parent_layout"
        app:layout_constraintStart_toStartOf="@id/parent_layout"
        app:layout_constraintTop_toTopOf="@id/parent_layout"
        android:layout_marginTop="200dp" android:layout_marginStart="0dp" android:layout_marginEnd="0dp"
        android:layout_marginBottom="20dp" android:id="@+id/play_find_menu"
>

    <TextView
            android:id="@+id/findMenu_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:text="@string/menu_find_title"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/findMenu_input"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"/>

    <EditText
            android:id="@+id/findMenu_input"
            android:layout_width="160dp"
            android:layout_height="30dp"
            android:background="@mipmap/item_pill"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:gravity="center"
            android:maxLength="4"
            android:hint="@string/menu_find_hint"
            android:inputType="textCapCharacters"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/findMenu_find_btn"
            android:layout_marginBottom="30dp"/>

    <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/findMenu_find_btn"
            android:text="@string/menu_find_btn"
            android:onClick="onClick"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:background="@mipmap/menu_btn_yellow"
            android:layout_width="200dp"
            android:layout_height="45dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="30dp"
            app:layout_constraintBottom_toTopOf="@+id/findMenu_back_btn"/>

    <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/findMenu_back_btn"
            android:text="@string/back_btn"
            android:onClick="onClick"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:background="@mipmap/menu_btn_white"
            android:layout_width="200dp"
            android:layout_height="45dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
    />

</androidx.constraintlayout.widget.ConstraintLayout>