<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@id/parent_layout"
        app:layout_constraintEnd_toEndOf="@id/parent_layout"
        app:layout_constraintStart_toStartOf="@id/parent_layout"
        app:layout_constraintTop_toTopOf="@id/parent_layout"
        android:layout_marginTop="200dp" android:layout_marginStart="0dp" android:layout_marginEnd="0dp"
        android:layout_marginBottom="20dp" android:id="@+id/play_menu"
>

    <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/playMenu_find_game"
            android:text="@string/menu_play_category1"
            android:onClick="onClick"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:background="@mipmap/menu_btn_yellow"
            android:layout_width="200dp"
            android:layout_height="45dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="30dp"
            app:layout_constraintBottom_toTopOf="@+id/playMenu_online_game"/>

    <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/playMenu_online_game"
            android:text="@string/menu_play_category2"
            android:onClick="onClick"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:background="@mipmap/menu_btn_yellow"
            android:layout_width="200dp"
            android:layout_height="45dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="30dp"
            app:layout_constraintBottom_toTopOf="@+id/playMenu_hotseat_game"/>

    <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/playMenu_hotseat_game"
            android:text="@string/menu_play_category3"
            android:onClick="onClick"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:background="@mipmap/menu_btn_yellow"
            android:layout_width="200dp"
            android:layout_height="45dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="30dp"
            app:layout_constraintBottom_toTopOf="@+id/back_btn"/>

    <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/back_btn"
            android:text="@string/back_btn"
            android:onClick="onClick"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:background="@mipmap/menu_btn_white"
            android:layout_width="200dp"
            android:layout_height="45dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
    />

</androidx.constraintlayout.widget.ConstraintLayout>